update chronicalMap